--- a/Parvaiz.html
+++ b/Parvaiz.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sound Reel</title>
+    <link rel="stylesheet" href="homefire.css">
+
+</head>
+
 <div class="container">
     <div class="column add-bottom">
         <div id="mainwrap">
@@ -21,3 +31,8 @@
         
     </div>
 </div>
+
+    <body>
+  
+</body>
+</html>
