--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sound Reel</title>
     <link rel="stylesheet" href="homefire.css">
+  <script src="parvaiz.js"></script>
 
 </head>
 
