--- a/index.html
+++ b/index.html
@@ -4,36 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sound Reel</title>
-    <link rel="stylesheet" href="homefire.css">
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="homefire.css">
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
+
+  <!-- jQuery (required) -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+  <!-- Plyr JS -->
+  <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
 </head>
-  
+
 <body>
   
 <div class="container">
     <div class="column add-bottom">
         <div id="mainwrap">
+
             <div id="nowPlay">
-                <span id="npAction">Paused...</span><span id="npTitle"></span>
+                <span id="npAction">Paused...</span>
+                <span id="npTitle"></span>
             </div>
+
             <div id="audiowrap">
                 <div id="audio0">
-                    <audio id="audio1" preload controls>Your browser does not support HTML5 Audio! 😢</audio>
+                    <audio id="audio1" preload controls>
+                        Your browser does not support HTML5 Audio! 😢
+                    </audio>
                 </div>
+
                 <div id="tracks">
-                    <a id="btnPrev">&larr;</a><a id="btnNext">&rarr;</a>
+                    <a id="btnPrev" href="#">&larr;</a>
+                    <a id="btnNext" href="#">&rarr;</a>
                 </div>
             </div>
+
             <div id="plwrap">
                 <ul id="plList"></ul>
             </div>
+
         </div>
     </div>
-    <div class="column add-bottom center">
-        
-    </div>
+    <div class="column add-bottom center"></div>
 </div>
 
-  <script src="parvaiz.js"></script>
+<!-- Your JS file -->
+<script src="parvaiz.js"></script>
+
 </body>
 </html>
