--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sound Reel</title>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="homefire.css">
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
 
-  <!-- jQuery (required) -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-  <!-- Plyr JS -->
-  <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+  <script src="parvaiz.js"></script>
 </head>
 
 <body>
